Fixed fab button bug and fixed tree layout bug in firefox.

--- a/css/style.css
+++ b/css/style.css
@@ -160,9 +160,9 @@ nav {
 
 .commits-section ul {
   list-style: none;
-  -webkit-padding-start: 3em;
-  -webkit-margin-before: 1em;
-  -webkit-margin-after: 1em;
+  position: relative;
+  padding-left: 3em;
+  margin-top: 1em;
 }
 
 .commits-section ul li {
@@ -176,16 +176,12 @@ nav {
   display: block;
   width: 1em;
   height: 1em;
-  border: solid .1em;
+  border: solid .105em;
   border-radius: 100%;
   position: absolute;
   left: -2em;
   background: white;
   z-index: 2;
-}
-
-.commits-section ul {
-  position: relative;
 }
 
 .commits-section ul:before {
@@ -202,7 +198,7 @@ nav {
 
 .commit.merge:before {
   content: "";
-  border: solid .1em;
+  border: solid .105em;
   border-left: none;
   border-bottom: none;
   border-radius: 0;
@@ -288,7 +284,7 @@ nav {
 
 .commit.new-branch:before {
   content: "";
-  border: solid .1em;
+  border: solid .105em;
   border-left: none;
   border-top: none;
   border-radius: 0;
@@ -510,6 +506,8 @@ ul.branch.master-branch {
   /* Mobile fab button */
   nav.fab {
     position: fixed;
+    width: 32px;
+    height: 32px;
     right: 15px;
     bottom: 15px;
     z-index: 99;
@@ -527,6 +525,8 @@ ul.branch.master-branch {
     display: block;
     margin: auto;
     list-style: none;
+    padding: 0;
+    margin: 0;
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
     -webkit-margin-start: 0;
@@ -575,20 +575,25 @@ ul.branch.master-branch {
     transition: ease-in-out .35s;
   }
   .fab-button {
-    background-color: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
     background-image: none;
     border: none;
-    2px: no-repeat background-repeat:;
-    width: 32px;
-    height: 32px;
-    position: relative;
+    margin: auto;
+    background-color: transparent;
+    display: block;
     z-index: 4;
   }
   .fab-button:before, .fab-button:after {
     content: "";
     position: absolute;
-    width: 7%;
-    height: 100%;
+    width: 6%;
+    height: 50%;
     background: white;
     display: block;
     top: 0;
@@ -603,14 +608,14 @@ ul.branch.master-branch {
   }
   .fab.expanded .fab-button:after {
     transform: rotate(225deg);
-    left: 25%;
-    bottom: -25%;
+    left: 15%;
+    bottom: -5%;
   }
   .fab.expanded .fab-button:before {
     transform: rotate(-225deg);
-    height: 50%;
-    left: -80%;
-    bottom: -55%;
+    height: 30%;
+    left: -35%;
+    bottom: -20%;
   }
   /* fab backdrop for more awesomeness */
   .fab-backdrop.expanded {
